--- a/Sign-up.html
+++ b/Sign-up.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>SignUp Page</title>
-<link rel="stylesheet" href="Signmeup.css">
+<link rel="stylesheet" href="signmeup.css">
 </head>
 <body align = "center">
     <h1> CREATE YOUR ACCOUNT </h1>
